--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
+    "@lutaok/solid-modal": "^0.1.1",
     "@solidjs/router": "^0.10.9",
     "solid-js": "^1.8.11",
     "solid-toast": "^0.5.0"
