--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@lutaok/solid-modal": "^0.1.1",
     "@solidjs/router": "^0.10.9",
+    "@types/lodash": "^4.14.202",
+    "lodash": "^4.17.21",
     "solid-js": "^1.8.11",
     "solid-toast": "^0.5.0"
   }
